--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "firebase": "^6.0.2",
     "google-map-react": "^1.1.4",
     "moment": "^2.22.0",
+    "rc-datetime-picker": "^1.6.1",
     "react": "^16.8.6",
     "react-cropper": "^1.2.0",
     "react-datepicker": "2.5.0",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
     "react-infinite-scroller": "^1.2.4",
