--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "react-redux-firebase": "^2.2.6",
     "react-redux-toastr": "^7.5.1",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0",
+    "react-scripts": "^3.3.1",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.1.0",
     "redux-firestore": "^0.3.2",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
     "revalidate": "^1.2.0",
-    "semantic-ui-react": "^0.87.1"
+    "semantic-ui-react": "^0.87.1",
+    "style-loader": "^1.1.3"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
